# bulldever-web

./: .dockerignore  DOCS.md  FAQ.md  FEATURES.md  PATHFINDING_IMPLEMENTATION.md  docker-compose.yml  main.py  pyproject.toml
server/: .dockerignore  .env.exemples  .gitignore  Dockerfile  db.sqlite3  pyproject.toml
server/depart/: urls.py  views.py
server/pathfinding/: README.md  admin.py  graph.py  integration_tests.py  test_dijkstra_advanced.py  test_dijkstra_comprehensive.py  test_pathfinding.py  tests_api.py  urls.py  views.py
server/server/: asgi.py  settings.py  urls.py
server/traffic/: consumers.py  models.py  serializers.py  tests.py  urls.py  views.py
server/traffic/management/commands/: seed_tana.py
server/traffic/migrations/: 0001_initial.py  0002_trafficsnapshot.py  0003_accident.py
server/users/: models.py  permissions.py  serializers.py  urls.py  views.py
server/users/management/commands/: seed_users.py
server/users/migrations/: 0001_initial.py
web/: Dockerfile  next.config.ts  out.json  package-lock.json  package.json  pnpm-lock.yaml  test_overpass.mjs
web/app/: globals.css  layout.tsx  page.tsx
web/app/auth/: page.tsx
web/app/dashboard/: page.tsx
web/app/unauthorized/: page.tsx
web/components/auth/: RequireAuth.tsx
web/components/simulation/: CarSystem.tsx  TrafficLayer.tsx  accidentTypes.ts  config.ts  trafficLightTypes.ts  zones.ts
web/components/ui/: AccidentPanel.tsx  ChatbotUI.tsx  HUD.tsx  LandingPage.tsx  ManualRoutingPanel.tsx  (+2 more)
web/contexts/: AuthContext.tsx
web/hooks/: useTrafficSocket.ts
web/lib/: api.ts
(+7 files in other folders)
