[project]
name = "server"
version = "0.1.0"
description = "Traffic Digital Twin Backend"
dependencies = [
    "django>=5.0",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.3.1",
    "google-genai>=0.1.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.9",
    "dj-database-url>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
